xx Dec 2006: 0.3.2 Miek <miek@miek.nl>
   -- blaah --


26 Nov 2006: 0.3.1 Miek <miek@miek.nl>
   -- minor fixes --
   * print the bytes transfered with 1 decimal.
   * compilation fix when you don't have xattr (on Linux)
   * documentation updates; rdup-backups(8) [still needs work]
   * added: rdup-cp (and manpage) to copy from a rdup created backup


29 Oct 2006: 0.3.0 Miek <miek@miek.nl>
   -- minor fixes --
   * add manual page for rdup-snap-link
   * Some autotool fixes
   * documentation updates
   * rdup-snap-here fixes


25 Oct 2006: 0.3.0-rc1 Miek <miek@miek.nl>
   -- major features enhancements --
  ** OUTPUT CHANGES **
   * new format character: %b: permission bits
   * new format character: %H: print the sha1 hash of the file
   * output changed to: %p%T %b %u %g %l %s %n\n"
   * the LIST syntax was changed to include the
     filename size. This was due to a weird bug
     on Solaris where mangled entries are written...
  ** BIG changes **
   * When a file changes size:
     when smaller: NULLs are inserted
     when larger: the file is broken off
   * No shell utils are installed anymore, only the wrappers
   * rdup-snapshot, rdup-mirror add -f option: do a full dump
   * History.sh and yesterday.sh are removed from the archive
   * ${prefix/}share/rdup is used for common perl/shell files
     all utilities now source these files
   * Removed -l arg from the utils
   * All scripts are prefixed with 'rdup-'
   * All installed scripts loose the .sh/.pl suffix (Debian Policy)
   * rdup-snap added (perl) tool ala mirror but works on hard linked
     files
   * rdup-snapshot added (shell) small wrapper for rdup and rdup-snap
     This uses 'cp -plr' which is a gnu-ism
   * Solaris 10 extended attributes support was added
   * Loose the multiple backup directory stuff
  ** smaller changes **
   * Moved Makefile.in to GNUmakefile.in to force gmake usage
   * Bug fix in gzip.pl (now rdup-gzip)
   * Bug fix in crypt.pl (now rdup-crypt)